--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,23 +1,32 @@
-name: Lint (pre-commit)
+name: Auto-format & Lint
 
 on:
   push:
-    paths: ['**.py', '.pre-commit-config.yaml', 'dev-requirements.txt']
   pull_request:
-    paths: ['**.py', '.pre-commit-config.yaml', 'dev-requirements.txt']
-  workflow_dispatch:
 
 jobs:
-  lint:
+  format-lint:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install dev deps
+      - name: Install formatters & linter
         run: |
           python -m pip install --upgrade pip
-          pip install -r dev-requirements.txt
-      - name: Run pre-commit
-        run: pre-commit run --all-files --show-diff-on-failure
+          pip install black==23.12.1 isort==5.13.2 flake8==6.1.0
+      - name: Run Black (auto-fix)
+        run: black --line-length 100 .
+      - name: Run isort (auto-fix)
+        run: isort --profile black --line-length 100 .
+      - name: Commit changes (if any)
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "chore: auto-format with black+isort"
+      - name: Flake8 (light rules)
+        run: flake8 --max-line-length 100 --extend-ignore=E203,E266,E501,W503
